--- a/templates/S3-WithVersioningAndLogging-ReadWriteDeletePolicy-ReadOnlyPolicy.template
+++ b/templates/S3-WithVersioningAndLogging-ReadWriteDeletePolicy-ReadOnlyPolicy.template
@@ -20,6 +20,16 @@
       "AllowedValues": ["Enabled", "Suspended"],
       "Default": "Suspended"
     },
+    "ServerSideEncryptionAlgorithm": {
+      "Description": "Specify server side encryption. Choose None to disable server side encryption.",
+      "Type": "String",
+      "AllowedValues": ["None", "AES256", "aws:kms"],
+      "Default": "None"
+    },
+    "KMSMasterKeyID": {
+      "Description": "KMS Master Key ID. Required only if selecting aws:kms in ServerSideEncryptionAlgorithm.",
+      "Type": "String",
+    },
     "ReadOnlyGroupName": {
       "Description": "Optional. Name of the Group to be created and given Read-only access to the given bucket.",
       "Type": "String",
@@ -33,6 +43,8 @@
   },
 
   "Conditions": {
+    "SSEEnabled": {"Fn::Not": [{"Fn::Equals": ["None", {"Ref": "ServerSideEncryptionAlgorithm"}]}]},
+    "KMSKeySpecified": {"Fn::Not": [{"Fn::Equals": ["", {"Ref": "KMSMasterKeyID"}]}]},
     "LoggingEnabled": {"Fn::Equals": ["Enabled", {"Ref": "EnableLogging"}]},
     "VersioningEnabled": {"Fn::Equals": ["Enabled", {"Ref": "EnableVersioning"}]},
     "ReadOnlyGroupNameSpecified": {"Fn::Not": [{"Fn::Equals": ["", {"Ref": "ReadOnlyGroupName"}]}]},
@@ -55,6 +67,26 @@
       "Properties": {
         "BucketName": {"Ref":"BucketName"},
         "AccessControl": "BucketOwnerFullControl",
+        "BucketEncryption": {
+          "Fn::If" : [
+            "SSEEnabled",
+            {
+              "ServerSideEncryptionConfiguration": [{
+                "ServerSideEncryptionByDefault": {
+                  "SSEAlgorithm": {"Ref": "ServerSideEncryptionAlgorithm"},
+                  {
+                    "Fn::If" : [
+                      "KMSKeySpecified",
+                      {"KMSMasterKeyID": {"Ref": "KMSMasterKeyID"}},
+                      {"Ref": "AWS::NoValue"}
+                    ]
+                  }
+                }
+              }]
+            },
+            {"Ref": "AWS::NoValue"}
+          ]
+        },
         "LoggingConfiguration": {
           "Fn::If" : [
             "LoggingEnabled",
