--- a/templates/Database/DynamoDB-Table.template
+++ b/templates/Database/DynamoDB-Table.template
@@ -1,9 +1,21 @@
 {
   "AWSTemplateFormatVersion": "2010-09-09",
 
-  "Description": "Create DynamoDB Table. http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dynamodb-table.html",
+  "Description": "Create basic DynamoDB Table with On-Demand Read/Write Capacities and some CloudWatch Alarms",
 
   "Parameters": {
+    "AlertHighConsumedReadCapacityUnits": {
+      "Type": "Number",
+      "Description": "Send SNS email notification if the given threshold of ConsumedReadCapacityUnits is reached; e.g. 100 units/Period => 100 * Period = 6000",
+    },
+    "AlertHighConsumedWriteCapacityUnits": {
+      "Type": "Number",
+      "Description": "Send SNS email notification if the given threshold of ConsumedWriteCapacityUnits is reached; e.g. 20 units/Period => 20 * Period = 1200",
+    },
+    "DynamoDBAlarmEmail": {
+      "Type": "String",
+      "Description": "Email address to notify if there are any DDB operational issues",
+    },
     "PointInTimeRecoveryEnabled": {
       "Description": "Enables PointInTimeRecovery.",
       "Type": "String",
@@ -26,16 +38,6 @@
       "AllowedValues": ["HASH", "RANGE"],
       "Default": "HASH"
     },
-    "ProvisionedThroughputReadCapacity": {
-      "Description": "Sets the desired minimum number of consistent reads of items (up to 1KB in size) per second for the specified table before Amazon DynamoDB balances the load.",
-      "Type": "Number",
-      "Default": "5"
-    },
-    "ProvisionedThroughputWriteCapacity": {
-      "Description": "Sets the desired minimum number of consistent writes of items (up to 1KB in size) per second for the specified table before Amazon DynamoDB balances the load.",
-      "Type": "Number",
-      "Default": "5"
-    },
     "TableName": {
       "Description": "A name for the table. If you don't specify a name, AWS CloudFormation generates a unique physical ID and uses that ID for the table name.",
       "Type": "String",
@@ -52,14 +54,11 @@
           "AttributeName": {"Ref": "PrimaryKeyAttributeName" },
           "AttributeType": {"Ref": "PrimaryKeyAttributeType" }
         }],
+        "BillingMode": "PAY_PER_REQUEST",
         "KeySchema": [{
             "AttributeName": {"Ref": "PrimaryKeyAttributeName" },
             "KeyType": {"Ref": "PrimaryKeyType" }
         }],
-        "ProvisionedThroughput": {
-          "ReadCapacityUnits": {"Ref": "ProvisionedThroughputReadCapacity" },
-          "WriteCapacityUnits": {"Ref": "ProvisionedThroughputWriteCapacity" }
-        },
         "PointInTimeRecoverySpecification": {
           "PointInTimeRecoveryEnabled": {"Ref": "PointInTimeRecoveryEnabled"}
         },
@@ -68,6 +67,89 @@
         ]
       }
     },
+
+    "DdbAlarmSnsTopic": {
+      "Type": "AWS::SNS::Topic",
+      "Properties": {
+        "Subscription": [{
+          "Endpoint": {"Ref": "DynamoDBAlarmEmail"},
+          "Protocol": "email"
+        }]
+      }
+    },
+    "ConsumedReadCapacityUnitsAlarm": {
+      "Type": "AWS::CloudWatch::Alarm",
+      "DependsOn": "DdbAlarmSnsTopic",
+      "Properties": {
+        "AlarmActions": ["Ref": "DdbAlarmSnsTopic"],
+        "AlarmDescription": {"Fn::Join": [" ",
+          ["ConsumedReadCapacityUnits is higher than", {"Ref": "AlertHighConsumedReadCapacityUnits"}, "Units"]
+        ]},
+        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
+        "Dimensions": [{"Name": "TableName", "Value": {"Ref": "TableName"}}],
+        "EvaluationPeriods": 1,
+        "MetricName": "ConsumedReadCapacityUnits",
+        "Namespace": "AWS/DynamoDB",
+        "Period": 60,
+        "Statistic": "Sum",
+        "Threshold": {"Ref": "AlertHighConsumedReadCapacityUnits"},
+        "TreatMissingData": "notBreaching"
+      }
+    },
+    "ConsumedWriteCapacityUnitsAlarm": {
+      "Type": "AWS::CloudWatch::Alarm",
+      "DependsOn": "DdbAlarmSnsTopic",
+      "Properties": {
+        "AlarmActions": ["Ref": "DdbAlarmSnsTopic"],
+        "AlarmDescription": {"Fn::Join": [" ",
+          ["ConsumedWriteCapacityUnits is higher than", {"Ref": "AlertHighConsumedWriteCapacityUnits"}, "Units"]
+        ]},
+        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
+        "Dimensions": [{"Name": "TableName", "Value": {"Ref": "TableName"}}],
+        "EvaluationPeriods": 1,
+        "MetricName": "ConsumedWriteCapacityUnits",
+        "Namespace": "AWS/DynamoDB",
+        "Period": 60,
+        "Statistic": "Sum",
+        "Threshold": {"Ref": "AlertHighConsumedWriteCapacityUnits"},
+        "TreatMissingData": "notBreaching"
+      }
+    },
+    "SystemErrorsAlarm": {
+      "Type": "AWS::CloudWatch::Alarm",
+      "DependsOn": "DdbAlarmSnsTopic",
+      "Properties": {
+        "AlarmActions": ["Ref": "DdbAlarmSnsTopic"],
+        "AlarmDescription": "System errors",
+        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
+        "Dimensions": [{"Name": "TableName", "Value": {"Ref": "TableName"}}],
+        "EvaluationPeriods": 1,
+        "MetricName": "SystemErrors",
+        "Namespace": "AWS/DynamoDB",
+        "Period": 60,
+        "Statistic": "Sum",
+        "Threshold": 1,
+        "TreatMissingData": "notBreaching"
+      }
+    },
+    "UserErrorsAlarm": {
+      "Type": "AWS::CloudWatch::Alarm",
+      "DependsOn": "DdbAlarmSnsTopic",
+      "Properties": {
+        "AlarmActions": ["Ref": "DdbAlarmSnsTopic"],
+        "AlarmDescription": "User errors",
+        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
+        "Dimensions": [{"Name": "TableName", "Value": {"Ref": "TableName"}}],
+        "EvaluationPeriods": 1,
+        "MetricName": "UserErrors",
+        "Namespace": "AWS/DynamoDB",
+        "Period": 60,
+        "Statistic": "Sum",
+        "Threshold": 1,
+        "TreatMissingData": "notBreaching"
+      }
+    },
+
     "IamGroupRWDPolicy": {
       "Type": "AWS::IAM::ManagedPolicy",
       "Properties": {
